# crate-download-stats

./: Cargo.toml
src/: cli.rs  database.rs  main.rs  models.rs
testdata/: test_response.txt
