[package]
name = "fitsio-download-stats"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[dependencies]
serde = "0.9.7"
serde_derive = "0.9.7"
serde_json = "0.9.6"
error-chain = "0.9.0"
chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }
curl = { version = "0.4.6", optional = true }
dotenv = "0.8.0"
postgres = { git = "https://github.com/sfackler/rust-postgres", features = ["with-chrono"], rev = "09b078bdbb2ad901f6149d74348fa1195d6c7a84" }
clap = "2.20.5"

[features]
fetch-remote = ["curl"]
reset-database = []
default = ["fetch-remote"]

